import org.apache.tools.ant.filters.FixCrLfFilter

plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java'
    id 'application'
    id 'groovy'
    id 'antlr'
}

group 'net.nokok'
version '0.1'

tasks.withType(AbstractCompile)*.options*.encoding = tasks.withType(GroovyCompile)*.groovyOptions*.encoding = 'UTF-8'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

sourceCompatibility = '24'
targetCompatibility = '24'

repositories {
    mavenCentral()
}

def asmVersion = '9.7'

dependencies {
    antlr "org.antlr:antlr4:4.13.1"
    implementation group: 'org.ow2.asm', name: 'asm', version: asmVersion
    implementation group: 'org.ow2.asm', name: 'asm-commons', version: asmVersion
    implementation group: 'org.ow2.asm', name: 'asm-util', version: asmVersion
    implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
    implementation group: 'org.ow2.asm', name: 'asm-analysis', version: asmVersion
    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M6-groovy-4.0'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation 'org.apache.groovy:groovy:5.1.2'
    testImplementation 'org.apache.groovy:groovy-test:5.1.2'
}

test {
    testLogging {
        events 'passed', 'failed', 'skipped'
    }
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile).tap {
      configureEach {
        options.compilerArgs << "-Xlint"
      }
    }
}

generateGrammarSource {
    arguments += [
            '-Xlog',
            '-long-messages',
            '-visitor',
            '-listener',
            '-package', 'org.karaffe.compiler.frontend.karaffe.antlr'
    ]
    outputDirectory = file("${projectDir}/build/tmp_antlr")
}

tasks.register('filter', Copy) {
  dependsOn generateGrammarSource
  from file("${projectDir}/build/tmp_antlr")
  into file("${projectDir}/src/main/java/org/karaffe/compiler/frontend/karaffe/antlr")
  filter(FixCrLfFilter, eol: FixCrLfFilter.CrLf.newInstance("lf"))
}

compileJava.dependsOn filter

startScripts {
    applicationName = 'krfc'
}

startShadowScripts {
    applicationName = 'krfc'
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

mainClassName = "org.karaffe.compiler.Main"

sourceSets {
  test {
    resources {
      srcDirs("src/main/resources", "src/test/resources")
      exclude("**/*_ja.properties")
    }
  }
}

gradle.projectsEvaluated {
  tasks.withType(JavaCompile).tap {
    configureEach {
      options.compilerArgs << "-Xlint:all" << "-Werror"
    }
  }
}

compileJava {
  doFirst {
    options.compilerArgs = [
      "--module-path", classpath.asPath
    ]
    classpath = files()
  }
}
